# quocli

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/cache/: db.rs  mod.rs
src/config/: loader.rs  mod.rs
src/executor/: mod.rs  runner.rs
src/llm/: client.rs  mod.rs  prompt.rs
src/llm/providers/: anthropic.rs
src/parser/: help.rs  mod.rs  spec.rs
src/shell/: envvars.rs  history.rs  mod.rs
src/tui/: form.rs  mod.rs  theme.rs  widgets.rs
