[package]
name = "quocli"
version = "0.1.0"
edition = "2021"
description = "AI-powered CLI form generator that wraps arbitrary commands"
license = "MIT"
repository = "https://github.com/robert-e-davidson3/quocli"
keywords = ["cli", "tui", "ai", "form-generator"]
categories = ["command-line-utilities"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration
directories = "5"

# Crypto for hashing
sha2 = "0.10"
hex = "0.4"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc utilities
once_cell = "1"
regex = "1"
async-trait = "0.1"
shell-words = "1"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"

[[bin]]
name = "quocli"
path = "src/main.rs"
